[gd_scene load_steps=2 format=3 uid="uid://cn75sgd4pqcwd"]

[ext_resource type="Script" uid="uid://dqhyyyblfxogh" path="res://entities/pause_menu.gd" id="1_mus2k"]

[node name="PauseMenu" type="ColorRect"]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.3137255)
script = ExtResource("1_mus2k")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(720, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -360.0
offset_right = 360.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
alignment = 1

[node name="PausedText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font_size=120][center]Paused"
fit_content = true
scroll_active = false

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ContinueButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="ContinueText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ContinueButton/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font_size=80][center]Continue"
fit_content = true
scroll_active = false

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/RetryButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="RetryText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/RetryButton/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font_size=80][center]Retry"
fit_content = true
scroll_active = false

[node name="RestartButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/RestartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="RestartText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/RestartButton/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font_size=80][center]Retry From Start"
fit_content = true
scroll_active = false

[node name="ReturnButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ReturnButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="ReturnText" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ReturnButton/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
bbcode_enabled = true
text = "[font_size=80][center]Return to Hub"
fit_content = true
scroll_active = false

[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
